nuox/src/snapshots/nuox__snapshot_tests__ask_user_expanded_cancelled_renders_no_answer.snap
---
source: apps/terminal/crates/mutx/src/snapshot_tests.rs
expression: "render_grid(&m, 80, 8)"
---
- Ask: Proceed with the risky path?
    Proceed with the risky path? (2 options)
  ↳ cancelled — no answer

backgrounds:
A=#070808  B=#111312  .=reset
0: A80
1: B80
2: B80
3: B80
