nuox/src/snapshots/nuox__snapshot_tests__read_text_expanded_renders_code_block.snap
---
source: apps/terminal/crates/mutx/src/snapshot_tests.rs
expression: "render_grid(&m, 80, 40)"
---
- Read src/lib.rs
    1 fn main() {
    2     let x = 1;
    3 }
    4

backgrounds:
A=#070808  B=#111312  .=reset
0: A80
1: B80
2: B80
3: B80
4: B80
